2009-10-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ColumnHeader.cs: Remove the double linear search in the Index
	property, by removing the call to Contains, which is not needed.
	Also, Columns collection can never be null.

2009-10-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ColumnHeader.cs: When calculating the width and height of the
	column, try to expand to the right and use all the free space if we
	are the last column *and* the resize mode is set to -2/header content.
	Fixes #544716.

2009-10-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: When retrieving the top item, take into account the
	offset represented by the header control, to retrieve the proper
	value. Patch by Christoph von Wittich (Christoph at ApiViewer.de)
	Fixes the remaining bits of #543773.

2009-10-14  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: TopItem setter should set the value as the top, not
	only ensuring its visibility.
	Fixes part of #543773.

2009-10-12  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: For virtual mode, when navigating the items using keyboard,
	don't use the matrix of positions, and instead calculate the positions
	based on the number of cols and rows, taking advantage of the fixed
	positions of items. Use the same idea to implement FirstVisibleIndex,
	so we avoid iterating over all the items. Patch by Stephen Robinson
	mono at esar.org.uk.
	Fixes part of #467418.

2009-10-12  Dick Porter  <dporter@codicesoftware.com>

	* Splitter.cs: Adjust offsets when more than one splitter is
	present in a control.  Fixes bug 509472.

2009-10-07  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ListView.cs: When computing the value for groups height don't use
	text_size field, since in LargeIcon view it sometimes contains a
	double height value - use Font.Height directly, and also improve the
	padding value.
	* ThemeWin32Classic: The same as above.